added font-family and link to github repo

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap");
+
+// Fonts
+$font-I: "Josefin Sans", sans-serif;
+$font-II: "Alata", sans-serif;
+
 //Primary
 $White: hsl(0, 0%, 100%);
 $Black: hsl(0, 0%, 0%);
