--- a/sass/main.scss
+++ b/sass/main.scss
@@ -101,11 +101,14 @@ body {
 					text-decoration: none;
 					padding: 0.5rem 0.5rem;
 					margin: 0 1rem;
+					font-family: $font-II;
 
 					@media (max-width: 760px) {
 						margin: 1rem 0;
 						font-size: 2em;
 						text-transform: uppercase;
+						font-family: $font-I;
+						font-weight: 300;
 					}
 
 					&::before {
@@ -144,6 +147,8 @@ body {
 			text-transform: uppercase;
 			color: $White;
 			line-height: 1;
+			font-family: $font-I;
+			font-weight: 300;
 
 			@media (max-width: 1096px) {
 				width: 65%;
@@ -208,6 +213,8 @@ body {
 					word-spacing: 0.5rem;
 					text-transform: uppercase;
 					padding-bottom: 1.5rem;
+					font-family: $font-I;
+					font-weight: 300;
 
 					@media (max-width: $s) {
 						word-spacing: unset;
@@ -219,6 +226,7 @@ body {
 					font-size: 1em;
 					line-height: 1.875;
 					text-align: justify;
+					font-family: $font-II;
 				}
 			}
 		}
@@ -244,6 +252,8 @@ body {
 					font-weight: 400;
 					text-transform: uppercase;
 					word-spacing: 0.5rem;
+					font-family: $font-I;
+					font-weight: 300;
 				}
 
 				.btn {
@@ -257,6 +267,7 @@ body {
 					letter-spacing: 0.1rem;
 					cursor: pointer;
 					transition: 0.25s;
+					font-family: $font-II;
 
 					&:hover {
 						background: $Black;
@@ -291,6 +302,7 @@ body {
 					letter-spacing: 0.1rem;
 					cursor: pointer;
 					transition: 0.25s;
+					font-family: $font-II;
 
 					&:hover {
 						background: $Black;
@@ -353,6 +365,8 @@ body {
 						font-size: 2em;
 						font-weight: 400;
 						text-transform: uppercase;
+						font-family: $font-I;
+						font-weight: 300;
 
 						@media (max-width: $xs) {
 							padding: 1rem;
@@ -463,6 +477,7 @@ body {
 				text-decoration: none;
 				padding: 0.5rem;
 				margin-right: 1rem;
+				font-family: $font-II;
 
 				@media (max-width: $s) {
 					margin: 0 1rem;
@@ -544,6 +559,7 @@ body {
 
 		p {
 			padding-top: 2rem;
+			font-family: $font-II;
 		}
 	}
 }
